fix(css): fix #2125 - Remove horizontal scrollbars
Add missing px

Fix scss linter prob

--- a/packages/fxa-content-server/app/styles/_layout.scss
+++ b/packages/fxa-content-server/app/styles/_layout.scss
@@ -49,7 +49,7 @@
     max-width: 640px;
     padding: 32px 0 0;
     transition: box-shadow 250ms cubic-bezier(0.07, 0.95, 0, 1);
-    width: 100vw;
+    width: 100%;
   }
 
   @include respond-to('small') {
@@ -58,7 +58,7 @@
     border-top: 1px solid $settings-header-border-bottom;
     box-shadow: none;
     padding: 30px 0 10px;
-    width: 100vw;
+    width: 100%;
   }
 
   &.animate-shadow {
