--- a/packages/fxa-content-server/app/styles/modules/_settings.scss
+++ b/packages/fxa-content-server/app/styles/modules/_settings.scss
@@ -796,24 +796,24 @@ section.modal-panel {
 }
 
 .breadcrumbs {
+  padding-left: 100px;
+  margin-top: 0;
   width: 100%;
-  margin-top: 0px;
-  margin-left: 100px;
 
   li {
     list-style: none;
     float: left;
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
 
-    &:before {
+    &::before {
       content: "\003E";
-      padding: 0px 10px;
+      padding: 0 10px;
     }
 
-    &:first-child:before {
+    &:first-child::before {
       content: "";
-      padding: 0px;
+      padding: 0;
     }
   }
 }
