--- a/packages/fxa-payments-server/src/components/AppLayout/index.scss
+++ b/packages/fxa-payments-server/src/components/AppLayout/index.scss
@@ -31,8 +31,8 @@
 }
 
 .breadcrumbs {
-  margin-left: 100px;
   margin-top: 0;
+  padding-left: 100px;
   width: 100%;
 
   li {
